\name{NEWS}
\title{NEWS file of the TraMineRextras package}

\section{Changes in version 0.7.7 [2023-03-07] }{

    \subsection{Misc.}{
    	\itemize{
    		\item
            No changes.
    	}
    }
}

\section{Changes in version 0.6.6 [2023-03-07] }{

    \subsection{New function}{
    	\itemize{
    		\item
            \code{dissindic()} case indicators to select observations that are typical, atypical,
            illustrative of or counterexample of a statistical association between trajectories
    	    and a covariate/typology.
    	}
    }
    \subsection{Changes in existing functions}{
        \itemize{
            \item
            \code{seqsplot()}, argument \code{axes} is deprecated and replaced by \code{xaxis}.
            Argument \code{yaxis} can now also be one of \code{"all"} or \code{"left"}.
            \item
            \code{seqsplot()}, \code{ylab} can be a vector of labels by group level.
            \item
            \code{seqsplot()} supports arguments of \code{legend} among the \code{...} list.
            \item
            \code{plot.stslist.surv()}, plot method for objects returned by \code{seqsurv} displays
            the ylab closer from the y-axis when \code{yaxis=FALSE}. It also recognizes the \code{cex.lab} argument.
            \item
            \code{seqsplot()}, \code{seqplot.tentrop()}, \code{seqplot.tentrop.m()}, \code{seqedplot()}, \code{plot.dynin()}, and \code{plot.stslist.surv()}: default value of \code{main} is  \code{"auto"} and \code{NULL} suppresses the titles as expected.
            \item
            \code{seplot.entrop.m()} now in namespace.
            \item
            \code{seqedplot()} argument names and behavior made conformable with those of \code{TraMineR:::seqplot}
        }
    }
}

\section{Changes in version 0.6.5 [2022-10-09] }{

  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqplot.rf()} argument \code{plus.one} renamed \code{grp.meth}
    }
  }