@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.7.7
-Date: 2023-03-07
+Date: 2023-10-27
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
