@@ -1,7 +1,12 @@
-                CHANGES IN TraMineRextras VERSION 0.7.7 [2023-03-07]
+                CHANGES IN TraMineRextras VERSION 0.7.7 [2023-10-27]
 
-Misc.:
-    o   No changes
+Changes in existing functions:
+    o   All TraMineRextras plot functions: improved support of 
+        graphical parameters. (E.g., las and cex.axis can 
+        now be used to control the display of tick labels.)
+        
+Bug fixes:
+    o   seqimplic.Rd: no description for argument 'ylim'.
     
 
                 CHANGES IN TraMineRextras VERSION 0.6.6 [2023-03-07]
